MARTAS provides tools and libraries for data acquisition
and collection from many different sources.
-------------------------------------------------

####v<1.0.7>, <xxxx-xx-xx> --

v1.0.7 general:

v1.0.7 additions:
    - extended backup

v1.0.7 fixes:

####v<1.0.6>, <2023-01-03> --

v1.0.6 general:
    - added and tested recovery script
    - backup script extended including credentials
    - updated README with backup instructions

v1.0.6 additions:
    - library for 4PL (Lippmanns 4 point light geoelectric probes)

v1.0.6 fixes:
    - install telegrambot does not overwrite preexisting configurations

####v<1.0.5>, <2022-12-20> --

v1.0.5 general:
    - fully tested on Beaglebone

v1.0.5 additions:
    - first version of recovery script, backup option improved

v1.0.5 fixes:
    - arduino library for py2 and py3

####v<1.0.4>, <2022-10-20> --

v1.0.4 general:
    - description on how to subscribe to MQTT from remote with mosquitto>2.0 in README
      (i.e. required for new Ubunutu22.04 etc)

v1.0.4 additions:
    - py3 support for protocols: gsm90, gsm19, G823, env, gp20s3

####v<1.0.3>, <2022-07-26> --

v1.0.3 additions:
    - full obsdaq support and examples for FGE connected via obsdaq
    - file library to access and publish data from files
    - added backup script to save configurations periodically
    - added library support for Austrian GIC data
    - added library support and init for DIGIBASE gamma detectors

v1.0.3 corrections:
    - README update
    - some py3 fixes (adruino, lemi and other protocols)

v1.0.3 fixes:
    - telegrambot IMBOT fixes


####v<1.0.2>, <2021-11-11> --

v1.0.2 additions:
    - webcam options
    - monitor data

v1.0.2 corrections:
    - collectors clientid is better determined
    - telegrambot allows for cam options

####v<1.0.1>, <2020-03-03> --

v1.0.1 additions:
    - blacklist support in collector
    - multiple users for telegrambot
    - updated descriptions in README
    - added statemachine app
